# soa-nbp-tutorial

./: pyproject.toml
docs/source/: api.rst  conf.py  index.rst  parameters.rst  pde_computation.rst  tissue_insertion.rst
docs/source/examples/: healthy-anat-nbp.rst  lesion-inserted-anat-nbp.rst
docs/source/soa-nbp/: parameters.rst  tissue-insertion.rst  utils.rst
parameters/: VICTRE.cfg  __init__.py  constants.mat  predefined_prob_dist_acou.py  predefined_prob_dist_func.py  predefined_prob_dist_func.py.backup  predefined_prob_dist_opt.py  predefined_prob_dist_victre.py  tissue_type.py
