[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SOA-NBP"
authors = [{name = "Seonyeong Park", email = "sp33@illinois.edu"}, {name = "Umberto Villa", email = ""}, {name = "Mark Anastasio", email = "maa@illinois.edu"}]
dynamic = ["version", "description"]
